[project]
name = "multimodal-backlever-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antropy>=0.2.2",
    "astropy>=7.2.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.33",
    "moviepy===1.0.3",
    "neurokit2>=0.2.13",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pymediainfo>=7.0.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
